<resources>
    <string name="app_name">WCE रक्षणोपाय</string>
    <string name="email_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="submit">Submit</string>
    <string name="sign_in">Sign in</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your credentials</string>
    <string name="today_status">Today\'s Status</string>
    <string name="symptoms">Symptoms</string>
    <string name="district_wise_list">District wise list</string>
    <string name="state_wise_list">State wise list</string>
    <string name="senior_citizens">Senior Citizens</string>
    <string name="quarantine_stamped">Quarantine Stamped</string>
    <string name="travelled_from_containment_zone">Travelled from containment zone</string>
    <string name="group_more_than_five">Group more than 5</string>
    <string name="without_mask">Without mask</string>
    <string name="violating_covid19_guidelines">Violating COVID19 Guidelines</string>
    <string name="logout">Logout</string>
    <string name="districts">Districts</string>
    <string name="states">States</string>
    <string name="users">Users</string>
    <string name="contact">Contact :</string>
    <string name="district">District :</string>
    <string name="state">"State : "</string>
    <string name="prn">"PRN : "</string>
    <string name="class_title">"Class : "</string>
    <string name="address">"Address : "</string>
    <string name="birth_date">"Birth date : "</string>
    <string name="department">"Department : "</string>
    <string name="email_id">"Email ID : "</string>
    <string name="quarantined">"Quarantined in Lockdown : "</string>
    <string name="age">"Age : "</string>
    <string name="loc_of_visit">"Location of visit : "</string>
    <string name="purpose_of_visit">"Purpose of visit : "</string>
    <string name="visit_date">"Visit date : "</string>
    <string name="quarantine_period">"Quarantine period : "</string>
    <string name="title_location_permission">Access location</string>
    <string name="text_location_permission">Permission for accessing location is needed</string>
    <string name="ok">OK</string>
    <string name="current_location">"Current Location : "</string>
    <string name="status">Status</string>
    <string name="choose_date">Choose a date</string>
    <string name="self_assessment">Self Assessment</string>
    <string name="date">Date :</string>

    <string name="confirmed_patient_contact_question">Have you been in contact with a confirmed COVID19 positive patient in the past 14 days?</string>
    <string name="affected_region_question">Have you been to any affected countries or regions or towns in the past 14 days?</string>
    <string name="containment_zone_question">Have you traveled anywhere from Containment Zone of COVID-19 in last 28–45 days?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_symptoms">Select symptoms from following list :</string>
    <string name="body_ache">Body aches or muscle pain</string>
    <string name="chest_pain">Chest pain</string>
    <string name="breathing_difficulty">Difficulty in breathing</string>
    <string name="dry_cough">Dry cough</string>
    <string name="fever">Fever</string>
    <string name="headache">Headache</string>
    <string name="runny_nose">Runny nose</string>
    <string name="sore_throat">Sore throat</string>
    <string name="tiredness">Tiredness</string>
    <string name="none">None of the above</string>
    <string name="covid19guidelines"> COVID-19 GUIDELINES </string>
    <string name="default_notification_channel_id">wce_notification_channel_01</string>
    <string name="default_notification_channel_name">WCE Notifications</string>
    <string name="visitors">Visitors</string>
    <string name="count">Count :</string>
    <string name="no_visitor">No visitor found</string>
    <string name="meeting_with">"Meeting With : "</string>
    <string name="in_time">In Time :</string>
    <string name="out_time">Out Time :</string>
    <string name="guidelines1">
    \n<b>•</b> Clean your hands often. Use soap and water, or an alcohol-based hand rub.\n
        \n<b>•</b> Maintain a safe distance from anyone who is coughing or sneezing.\n
    \n<b>•</b> Wear a mask when physical distancing is not possible.\n
    \n<b>•</b> Don’t touch your eyes, nose or mouth.\n
    \n<b>•</b> Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.\n
    \n<b>•</b> Stay home if you feel unwell.\n
    \n<b>•</b> If you have a fever, cough and difficulty breathing, seek medical attention.\n
    \n<b>•</b> Take a Self Assesment test\n
    \n<b>•</b> check app regularly for updates\n
    \n<b>•</b> Greet with a Namaste instead of a handshake\n
    </string>
    <string name="guidelines2">
    \nCalling in advance allows your healthcare provider to quickly direct you to the right health facility. This protects you, and prevents the spread of viruses and other infections.\n
    </string>
    <string name="aboutmasks">
    \nMasks can help prevent the spread of the virus from the person wearing the mask to others. Masks alone do not protect against COVID-19, and should be combined with physical distancing and hand hygiene. Follow the advice provided by your local health authority.\n
    </string>
    <string name="guideline3">Protect yourself and others around you by knowing the facts and taking appropriate precautions. Follow advice provided by your local health authority</string>
    <string name="guideline4"><u>To prevent the spread of Covid-19</u></string>
    <string name="development_progress">Development currently in progress</string>
    <string name="enter_credentials">Please enter credentials</string>
    <string name="tnc_text">By continuing, you agree to our <a href="https://wce-visitor-management.web.app/assets/privacy-policy.pdf">Privacy Policy</a></string>
</resources>