<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NormalUserActivity"
    android:orientation="vertical"
    android:padding="16dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        >
        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/status_date_text_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:longClickable="false"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_logout"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:padding="0dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/self_assessment"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp" />
    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/lineView"
        android:background="@android:color/black"
     />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
          <TextView
              android:id="@+id/q1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/affected_region_question"
              android:textSize="16sp"
              />

            <RadioGroup
                android:id="@+id/q1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/q1"
                android:gravity="center"
                android:layout_marginTop="5dp">
                <RadioButton
                    android:id="@+id/q1_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    />
                <RadioButton android:id="@+id/q1_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/containment_zone_question"
                android:textSize="16sp"
                android:layout_below="@+id/q1_radio_group"
                android:layout_marginTop="10dp"

                />

            <RadioGroup
                android:id="@+id/q2_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/q2"
                android:gravity="center"
                android:layout_marginTop="5dp">
                <RadioButton
                    android:id="@+id/q2_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    />
                <RadioButton android:id="@+id/q2_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_patient_contact_question"
                android:textSize="16sp"
                android:layout_below="@+id/q2_radio_group"
                android:layout_marginTop="10dp"
                />

            <RadioGroup
                android:id="@+id/q3_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/q3"
                android:gravity="center"
                android:layout_marginTop="5dp">
                <RadioButton
                    android:id="@+id/q3_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    />
                <RadioButton android:id="@+id/q3_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    />
            </RadioGroup>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/mView"
                android:background="@android:color/black"
                android:layout_below="@+id/q3_radio_group"/>
            <TextView
                android:id="@+id/tvSymptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/symptoms"
                android:textSize="22sp"
                android:layout_below="@+id/mView"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/txt_symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_symptoms"
                android:layout_below="@+id/tvSymptoms"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:id="@+id/symptoms_layout"
                android:orientation="vertical"
                android:layout_below="@id/txt_symptoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <CheckBox
                    android:id="@+id/checkbox_body_ache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_ache"
                    android:onClick="onSymptomCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_chest_pain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chest_pain"
                    android:onClick="onSymptomCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_breathing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breathing_difficulty"
                    android:onClick="onSymptomCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_dry_cough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dry_cough"
                    android:onClick="onSymptomCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_fever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fever"
                    android:onClick="onSymptomCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_headache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headache"
                    android:onClick="onSymptomCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_runny_nose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runny_nose"
                    android:onClick="onSymptomCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_sore_throat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sore_throat"
                    android:onClick="onSymptomCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_tiredness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiredness"
                    android:onClick="onSymptomCheckboxClicked"/>
                <CheckBox
                    android:id="@+id/checkbox_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none"
                    android:textColor="#008000"
                    android:onClick="onSymptomCheckboxClicked"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/symptoms_layout"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_centerInParent="true"/>
        </RelativeLayout>


    </ScrollView>


</LinearLayout>