<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="60dp"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:orientation="vertical"
    tools:context=".MainActivity">



        <ImageView
            android:id="@+id/logo_image_view"
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/enter_credentials_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_image_view"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_credentials"
            android:textSize="18sp"
            android:gravity="center"
            />

        <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:layout_below="@+id/enter_credentials_text_view"
                 />

        <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
            android:layout_below="@+id/input_email"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_background"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            android:text="@string/sign_in"
            android:layout_below="@id/input_password"/>

        <LinearLayout
            android:id="@+id/tnc_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true"
                >

        <CheckBox
            android:id="@+id/agree_tnc_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
               />

        <TextView
            android:id="@+id/agree_terms_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tnc_text"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
             />
</RelativeLayout>